<resources>
    <string name="app_name">money manager</string>
    <string name="home">Home</string>
    <string name="income_output_titel">Income</string>
    <string name="current_balance">Current Balance</string>
    <string name="expense_out_titel">Expense</string>
    <string name="expenseHint">00</string>
    <string name="BalanceHint">00</string>
    <string name="Income_Hint">00</string>
    <string name="income_tital">Income</string>
    <string name="add">Add</string>
    <string name="incone">Income</string>
</resources>