<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_alignParentTop="true"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textStyle="bold"
                android:textColor="@color/tittel_coloer"
                android:layout_centerInParent="true"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/menuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#006200EE"
                android:drawableLeft="@drawable/ic_menu_black_24dp"
                android:drawableStart="@drawable/ic_menu_black_24dp" />
            <Button
                android:id="@+id/moreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#006200EE"
                android:layout_alignParentRight="true"
                android:drawableRight="@drawable/ic_more_vert_black_24dp"
                android:layout_alignParentEnd="true"
                android:drawableEnd="@drawable/ic_more_vert_black_24dp" />




        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/outputBar"
        android:layout_below="@+id/toolbar"
        android:gravity="center"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/output_background_color"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="200dp"
            android:background="@color/output_background_color"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                app:cardCornerRadius="5dp"
                android:id="@+id/incomeOutputCv"
                android:background="@color/Income_out_color">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789."
                    android:hint="@string/Income_Hint"
                    android:gravity="center"
                    android:id="@+id/IncomeOutputTv"
                    android:textColorHint="@color/HintColor"
                    tools:ignore="TextViewEdits" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_output_titel"
                android:textColor="@color/outTextViewColor"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="200dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:background="@color/currentBalance_out_color">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789."
                    android:hint="@string/BalanceHint"
                    android:gravity="center"
                    android:id="@+id/BalanceOutputTv"
                    android:textColorHint="@color/HintColor"
                    tools:ignore="TextViewEdits" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_balance"
                android:textColor="@color/outTextViewColor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/output_background_color"
            android:layout_height="200dp">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                app:cardCornerRadius="5dp"
                android:background="@color/Income_out_color">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789."
                    android:hint="@string/expenseHint"
                    android:gravity="center"
                    android:id="@+id/expenseOutputTv"
                    android:textColorHint="@color/HintColor"
                    tools:ignore="TextViewEdits" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_out_titel"
                android:textColor="@color/outTextViewColor"
                />


        </LinearLayout>




    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="50dp"
        android:paddingTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg2"
        android:layout_below="@+id/outputBar"
        android:paddingEnd="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="13dp"
            android:textColor="#000000"
            />

    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menuFt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/click"
        app:backgroundTint="#A3A3A3" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/minusftb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:backgroundTint="#A3A3A3"
        android:layout_toLeftOf="@+id/menuFt"
        android:layout_alignParentBottom="true"
        android:src="@drawable/minus"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plashftb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menuFt"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"

        android:layout_marginRight="36dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_add_black_24dp"
        app:backgroundTint="#A3A3A3"
        app:maxImageSize="30dp" />





</RelativeLayout>